--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link id="favicon" rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <script defer async src="assets/js/elvis.js"></script>
+    <script defer src="assets/js/elvis.js"></script>
   </head>
   <body>
     <app-root></app-root>
