--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link id="favicon" rel="icon" href="/favicon.ico" type="image/x-icon" />
     <script defer src="assets/js/elvis.js"></script>
+    <script nonce="testnonce">
+      window.__webpack_nonce__ = 'testnonce';
+    </script>
+    <meta http-equiv="content-security-policy" content="style-src 'self' 'nonce-testnonce';" />
+    <meta property="csp-nonce" content="testnonce" />
   </head>
   <body>
     <app-root></app-root>
