--- a/packages/web/src/index.html
+++ b/packages/web/src/index.html
@@ -10,8 +10,11 @@
     <script nonce="testnonce">
       window.__webpack_nonce__ = 'testnonce';
     </script>
-    <meta http-equiv="content-security-policy" content="style-src 'self' 'nonce-testnonce';" />
     <meta property="csp-nonce" content="testnonce" />
+    <meta
+      http-equiv="content-security-policy"
+      content="style-src 'self' 'nonce-testnonce' 'sha256-fuBb4+dp/wIo6FSViWYJqEgg5ytjyUm9NWEwaMKaprk=';"
+    />
   </head>
   <body>
     <app-root></app-root>
