--- a/packages/react-test/public/index.html
+++ b/packages/react-test/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Web site created using create-react-app" />
 
     <title>React Preview</title>
+    <style id="scroot"></style>
   </head>
 
   <body ontouchstart>
