--- a/packages/react-test/index.html
+++ b/packages/react-test/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="https://deploy-preview-1309--elvis-designsystem.netlify.app/react-preview/" />
     <title>React Test</title>
   </head>
   <body>
